--- a/src/sample/tasks.json
+++ b/src/sample/tasks.json
@@ -15,6 +15,6 @@
         "id": 2,
         "title": "task three",
         "description": "tercera tarea",
-        "done": true
+        "done": false
     }
 ]
